2004-04-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-group-alist): Add
	blog.inoue and blog.watanabe.

2004-04-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-hns-last-modified): Use 32400 as a
	correct timezone instead of JST (suggested by YAMAOKA-san).

2004-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Break
	long lines.

	* shimbun/shimbun.el (shimbun-make-date-string): Get a correct day
	of week even in the west side of Greenwich.

2004-04-22  Christian Schmitt  <Christian.Schmitt@Dresdner-Bank.com>

	* w3m.el (w3m-expand-path-name): Bind directory-sep-char to `?/'.
	It is `?\' by default in XEmacs on Windows (native, not Cygwin).

2004-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-symbol): Don't activate it in Emacs 20.  Advised
	by Arisawa-san.

2004-04-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Simplify the rule of sending referers.
	(w3m-add-referer-regexps): Abolished.
	(w3m-add-referer-predicate-function): Abolished.
	(w3m-add-referer): New option.
	(w3m-add-referer-p): New function.
	(w3m-add-referer-predicate-by-referer-regexps): Removed.
	(w3m-add-referer-predicate-by-hosts): Removed.
	(w3m-request-arguments, w3m-header-arguments): Follow the above
	changes.

2004-04-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-add-w3m-initial-frames): Get the correct value
	for the newly created frame in Emacs 19.

	* w3m.el (w3m-about-retrieve): Load base64 for Emacs 19.
	(w3m-minor-mode-command-alist): Add w3m-print-this-url.

	* w3m-bitmap.el (w3m-bitmap-image-insert): Don't put the evaporate
	property on empty overlays (revert 2004-04-07 change).

2004-04-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-texfaq.el: Rewrite.

2004-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el
	(shimbun-asahi-mytown-prepare-article): New function.