@@ -1918,9 +1918,6 @@ nil value means it has not been initialized.")
   "Hook functions run after setting up the arrived URLs database.")
 (defvar w3m-arrived-shutdown-functions nil
   "Hook functions run after saving the arrived URLs database.")
-(when (featurep 'w3m-favicon)
-  (add-hook 'w3m-arrived-setup-functions 'w3m-favicon-load-cache-file)
-  (add-hook 'w3m-arrived-shutdown-functions 'w3m-favicon-save-cache-file))
 
 (defconst w3m-image-type-alist
   '(("image/jpeg" . jpeg)
